[project]
name = "jambot"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]
license = "MIT"
authors = [ { name = "Will Pfleger", email = "pfleger.will@gmail.com" }]

[project.scripts]
jambot = "jambot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-cov>=6.0",
]

[tool.hatch.build]
include = [
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/jambot"]

[tool.hatch.build.targets.sdist]
include = ["src/jambot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
